# kindfi

./: .biome.json  .cursorrules  .gitbook.yaml  .gitignore  .swp  0001-feat-add-project-updates-migration-with-correct-time.patch  AGENTS.md  CODE_OF_CONDUCT.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  LICENSE  NOTICE  README.md  Taskfile.yml  biome.json  bun.lockb  commitlint.config.js  copilot-agent.md  docker-compose.mock-blockchain.yml  docker-compose.yml  package-lock.json  package.json  skills-lock.json  test-kyc.ts  tsconfig.json
.cursor/: mcp.json  settings.json
.husky/: commit-msg  (+1 more)
apps/contract/: .env.example  .env.sample  AUTH_CONTROLLER_SIGNERS.md  Cargo.toml  DEPLOYMENT_FIX.md  DEPLOYMENT_MAINNET.md  DEPLOYMENT_UPDATE.md  QUICK_FIX.md  README.md  SECURITY.md  auth-deployment-info-futurenet.txt  auth-deployment-info-testnet.txt  auth-deployment-info.txt  deployment-info.txt  mainnet-env-template.txt  rust-toolchain.toml
apps/contract/.cargo/: config.toml
apps/contract/.stellar/identity/: bob.toml
apps/contract/contracts/academy-badge-tracker/: Cargo.toml  Makefile
apps/contract/contracts/academy-badge-tracker/src/: datatypes.rs  errors.rs  events.rs  lib.rs  test.rs
apps/contract/contracts/academy-graduation-nft/: Cargo.toml  README.md
apps/contract/contracts/academy-graduation-nft/src/: admin.rs  datatype.rs  distribution.rs  interface.rs  lib.rs  metadata.rs  mint.rs  test.rs
apps/contract/contracts/academy-graduation-nft/test_snapshots/test/: test_achievement_score.1.json  test_admin_operations.1.json  test_attempt_transfer_fails.1.json  test_direct_badge_mock.1.json  test_get_graduation_nft.1.json  test_get_graduation_nft_none.1.json  test_has_graduation_nft.1.json  test_initialize_already_initialized.1.json  test_initialize_success.1.json  test_max_badges_validation.1.json  test_mint_already_minted.1.json  test_mint_empty_badges.1.json  test_mint_multiple_users.1.json  test_mint_not_completed.1.json  test_mint_not_initialized.1.json  test_mint_success_full_badges.1.json  test_mint_unauthenticated.1.json
apps/contract/contracts/academy-progress-tracker/: Cargo.toml  README.md
apps/contract/contracts/academy-progress-tracker/src/: errors.rs  events.rs  lib.rs  test.rs  testutils.rs
apps/contract/contracts/academy-progress-tracker/test_snapshots/test/: test_basic_progress.1.json
apps/contract/contracts/academy-verifier/: Cargo.toml
apps/contract/contracts/academy-verifier/src/: errors.rs  events.rs  lib.rs  test.rs
apps/contract/contracts/academy-verifier/test_snapshots/test/: test_contract_initialized_event.1.json  test_full_verification_process.1.json  test_individual_verification_components.1.json  test_initialization.1.json  test_initialize_already_initialized.1.json  test_read_only_behavior.1.json  test_user_certified_event.1.json
apps/contract/contracts/auth-contracts/: Cargo.toml
apps/contract/contracts/auth-contracts/account/: Cargo.toml  deployment-info.txt
apps/contract/contracts/auth-contracts/account-factory/: Cargo.toml
apps/contract/contracts/auth-contracts/account-factory/src/: events.rs  lib.rs  test.rs
apps/contract/contracts/auth-contracts/account/src/: base64_url.rs  errors.rs  events.rs  lib.rs  test.rs  transfers.rs
apps/contract/contracts/auth-contracts/auth-controller/: Cargo.toml  README.md  deployment-info.txt
apps/contract/contracts/auth-contracts/auth-controller/src/: base64_url.rs  errors.rs  events.rs  lib.rs  test.rs  test_auth.rs
apps/contract/contracts/auth-contracts/contracts/account/: Cargo.toml
apps/contract/contracts/auth-contracts/contracts/account-factory/: Cargo.toml
apps/contract/contracts/auth-contracts/contracts/auth-controller/: Cargo.toml
apps/contract/contracts/auth-contracts/src/: lib.rs
apps/contract/contracts/auth-contracts/tests/: Cargo.toml  test.rs  test_auth.rs  todo.md
apps/contract/contracts/governance/: Cargo.toml
apps/contract/contracts/governance/src/: errors.rs  events.rs  lib.rs  reputation_client.rs  storage.rs  test.rs  types.rs
apps/contract/contracts/mock_badge_tracker/: Cargo.toml
apps/contract/contracts/mock_badge_tracker/src/: lib.rs
apps/contract/contracts/mock_progress_tracker/: Cargo.toml
apps/contract/contracts/mock_progress_tracker/src/: lib.rs
apps/contract/contracts/nft/: Cargo.toml  nft.rs
apps/contract/contracts/nft-kindfi/: Cargo.toml  README.md
apps/contract/contracts/nft-kindfi/src/: burn.rs  errors.rs  events.rs  lib.rs  metadata.rs  mint.rs  test.rs  types.rs
apps/contract/contracts/nft/src/: access.rs  contract.rs  distribution.rs  errors.rs  events.rs  interface.rs  lib.rs  metadata.rs  minting.rs  nft_core.rs  pausable.rs  rate_limiting.rs  storage.rs  test.rs  types.rs
apps/contract/contracts/nft/test-snapshots/test/: test-basic-flow.1.json
apps/contract/contracts/nft/test_snapshots/test/: burn_nft_success.1.json  constructor_works.1.json  full_nft_lifecycle_works.1.json  metadata_operations_success.1.json  mint_nft_success.1.json  test_admin_access_control.1.json  test_basic_flow.1.json  test_error_handling.1.json  test_transfer_ownership.1.json  tier_operations_success.1.json
apps/contract/contracts/quest/: Cargo.toml
apps/contract/contracts/quest/src/: errors.rs  events.rs  lib.rs  reputation_client.rs  storage.rs  test.rs  types.rs
apps/contract/contracts/referral/: Cargo.toml
apps/contract/contracts/referral/src/: errors.rs  events.rs  lib.rs  reputation_client.rs  storage.rs  test.rs  types.rs
apps/contract/contracts/reputation/: Cargo.toml  README.md
apps/contract/contracts/reputation/src/: errors.rs  events.rs  lib.rs  nft_client.rs  storage.rs  test.rs  types.rs
apps/contract/contracts/streak/: Cargo.toml
apps/contract/contracts/streak/src/: errors.rs  events.rs  lib.rs  reputation_client.rs  storage.rs  test.rs  types.rs
apps/contract/scripts/: deploy-all-mainnet.sh  deploy-auth.sh  deploy-governance.sh  deploy-nft.sh  deploy-quest.sh  deploy-referral.sh  deploy-reputation.sh  deploy-streak.sh  deploy.sh  grant-recorder-role.sh  setup-gamification-contracts.sh  sync-quests-to-chain.sh
(+2904 files in other folders)
