[workspace]
resolver = "2"

members = [ "contracts/academy-graduation-nft", "contracts/academy-verifier", "contracts/auth-contracts/*", "contracts/mock_badge_tracker", "contracts/mock_progress_tracker", "contracts/nft", "contracts/reputation"]

[workspace.dependencies]
soroban-sdk = "22.0.6"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
