[package]
name = "academy_progress_tracker"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = ["export"]
export = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = "1.0.1"
rand = "0.8.5"
