[package]
name = "kindfi_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
auth_controller = { path = "./contracts/auth-controller", version = "0.1.0" }
account_factory = { path = "./contracts/account-factory", version = "0.1.0" }
account_contract = { path = "./contracts/account", version = "0.1.0" }
commons = {path = "./contracts/commons", version = "0.1.0"}