[package]
name = "governance"
description = "KindFi Governance contract - NFT-weighted community fund voting with rounds, options, and redistribution"
version = "0.0.0"
authors = ["Kindfi Org <contact@kindfi.org>"]
license = "MIT"
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
