[package]
name = "nft-kindfi"
description = "KindFi NFT contract - A non-fungible token contract for the KindFi platform's reputation and incentivization system"
version = "0.0.0"
authors = ["Kindfi Org <contact@kindfi.org>"]
license = "MIT"
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-macros = { workspace = true }
stellar-tokens = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
