[package]
name = "nft"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-non-fungible = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-non-fungible", branch = "main" }
stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-default-impl-macro", branch = "main" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }