[package]
name = "nft"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-constants = { workspace = true }
stellar-default-impl-macro = { workspace = true }
stellar-fungible = { workspace = true }
stellar-non-fungible = { workspace = true }
stellar-pausable = { workspace = true }
stellar-pausable-macros = { workspace = true }
stellar-upgradeable = { workspace = true }
stellar-upgradeable-macros = { workspace = true }
stellar-ownable = { workspace = true }
stellar-ownable-macro = { workspace = true }
stellar-access-control = { workspace = true }
stellar-access-control-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }