[package]
name = "account_contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", default-features = false }

[dev-dependencies]
p256 = { version = "0.13.2" }
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { version = "0.9.0" }
hex = { version = "0.4.3" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

