[package]
name = "auth_controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
rand_chacha = "0.9.0"
sha3 = "0.10.8"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
p256 = { version = "0.13", features = ["ecdsa"], default-features = false }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
hex = { version = "0.4.3" }
serde_json = { version = "1.0" }
account_contract = { path = "../account" }
account_factory = { path = "../account-factory" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
