[package]
name = "account_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stellar-xdr = { version = "22.0.0", default-features = true, features = [] }
soroban-sdk = { workspace = true }
stellar-strkey = "0.0.11"
sha2 = "0.10.8"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
