[package]
name = "account_contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.1" }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
ed25519-dalek = { version = "2.1.1" }
rand = { version = "0.9.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
